changed кружки и студии to места

--- a/public/404.html
+++ b/public/404.html
@@ -104,7 +104,7 @@
 
       <div id="menu">
 	<ul class="">
-	  <li ><a href="/activities">Кружки и студии</a></li>
+	  <li ><a href="/activities">Места</a></li>
 	  <li ><a href="/articles">Яркий журнал</a></li>
 	  <li class="current "><a href="/pages/org_komitet">Фестиваль</a>
 	    <div class="sub_menu">
@@ -175,7 +175,7 @@
       <div class="center column">
         <div class="menu">
           <ul>
-            <li><a href="/activities">Кружки и студии</a></li>
+            <li><a href="/activities">Места</a></li>
             <li><a href="/articles">Яркий журнал</a></li>
             <li><a href="/pages/org_komitet">Фестиваль</a></li>
             <li><a href="/contests">Конкурсы</a></li>
