--- a/public/404.html
+++ b/public/404.html
@@ -2,22 +2,15 @@
 <html>
 <head>
   <title>The page you were looking for doesn't exist (404)</title>
-  <link href="reset.css" media="all" rel="stylesheet" type="text/css" />
-  <link href="style.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="/reset.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="/style.css" media="all" rel="stylesheet" type="text/css" />
   
-  <script src="jquery.min.js" type="text/javascript"></script>
-  <script src="slides.min.jquery.js" type="text/javascript"></script>
-  <script src="js.js" type="text/javascript"></script>
+  <script src="/jquery.min.js" type="text/javascript"></script>
+  <script src="/slides.min.jquery.js" type="text/javascript"></script>
+  <script src="/js.js" type="text/javascript"></script>
 </head>
 
 <body>
-
-
-
-
-
-
-
 
     <div id="wrapper">
       <div id="header">
